Fix misaligned datasources tabs
Also content of all the tabs was visible by default and moude pointer over tabs
 should be a "hand" not a cursor

fixes #142

--- a/css/app.css
+++ b/css/app.css
@@ -248,10 +248,10 @@ i.hs-lm-queryable {
     top: 2px;
 }
 .hs-tab-singleDS {
-    display: table-cell!important;
-    table-layout: fixed;
-    width: 49%;
-    text-align: center;
+}
+
+.hs-tab-singleDS a {
+    cursor: pointer;
 }
 
 .hs-dataset-panel .panel-body {
